add initial HTML file with image

--- a/favourite-pet-project.html
+++ b/favourite-pet-project.html
@@ -5,7 +5,7 @@
   </head>
   <body>
   <h1> Bruno </h1>
-  <h2> What do I love about Bruno </h2>
+  <h2> What do I love about Bruno </h2><img src="images/puppy.jpeg alt="young bulldog pupppy"
   <p> Bruno has been one of my best buddies since I were a toddler.He has walked with me in my life journey from childhood till now I have a beautiful wife and 2 great children.I have watched him grow and develop from a blind, deaf and helpless puppy to a strong fearless master of boldness and courage.As he turns 25 years told, I celebrate his journey under the sun and pray to the gods to give him more strength and vigor till my middle-age years.Bruno motivates me because he possesses such unique amazing qualities</p>
   <ol>
       <li>Bold</li>
@@ -13,3 +13,6 @@
       <li>Robust</li>
       <li>Agressive</li>
       <li>Happy and smily dog</li>
+  </ol>
+</body>
+</html>
